m fixed bug where lives were not updating or displaying on game reset and trooper visibility was not being reset with game restart.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,7 @@ body{
   bottom: 25%;
 }
 
-.trooper{
 
-}
 
 #trooper-5, #trooper-6 {
   max-width: 75%;
